--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,8 +76,8 @@ jobs:
     steps:
       - name: Show GLIBC version
         run: ldd --version
-      - run: sudo yum makecache
-      - run: sudo yum -y install systemd-devel
+      - run: yum makecache
+      - run: yum -y install systemd-devel
       - uses: actions/checkout@v3
       - uses: Swatinem/rust-cache@v2
         with:
