--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,7 +77,8 @@ jobs:
       - name: Show GLIBC version
         run: ldd --version
       - run: yum makecache
-      - run: yum -y install systemd-devel
+      - run: yum -y install systemd-devel epel-release
+      - run: yum -y install jq
       - uses: actions/checkout@v3
       - uses: Swatinem/rust-cache@v2
         with:
@@ -91,7 +92,7 @@ jobs:
         run: cargo test --no-run --message-format=json | jq -r '"binary=\(select(.profile.test).filenames[])"' > $GITHUB_OUTPUT
       - name: Build release test binary
         id: test-release
-        run: cargo test --no-run --message-format=json |  jq -r '"binary=\(select(.profile.test).filenames[])"' > $GITHUB_OUTPUT
+        run: cargo test --no-run --message-format=json | jq -r '"binary=\(select(.profile.test).filenames[])"' > $GITHUB_OUTPUT
       - name: Build release binary
         uses: actions-rs/cargo@v1
         with:
