--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -146,6 +146,7 @@ jobs:
       - name: Test
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 2
           command: run-tests --show-output
           # Usually passes the second try if it flakes the first.
           max_attempts: 3
