--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -142,6 +142,8 @@ jobs:
           name: ${{ matrix.binary }}
       - name: Configure test binary permissions
         run: chmod +x $BINARY
+        env:
+          BINARY: ${{ matrix.binary }}
       - name: Test
         uses: nick-fields/retry@v2
         with:
