--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -144,7 +144,7 @@ jobs:
       - name: Configure test binary permissions
         run: chmod +x $BINARY
         env:
-          BINARY: ${{ steps.download.outputs.download-path }}
+          BINARY: ${{ steps.download.outputs.download-path }}/${{ matrix.binary }}
       - name: Test
         uses: nick-fields/retry@v2
         with:
@@ -153,7 +153,7 @@ jobs:
           # Usually passes the second try if it flakes the first.
           max_attempts: 3
         env:
-          BINARY: ${{ steps.download.outputs.download-path }}
+          BINARY: ${{ steps.download.outputs.download-path }}/${{ matrix.binary }}
 
   miri_tests:
     name: Miri tests
@@ -204,8 +204,8 @@ jobs:
       - name: Configure release binary permissions
         run: chmod +x $BINARY
         env:
-          BINARY: ${{ steps.download.outputs.download-path }}
+          BINARY: ${{ steps.download.outputs.download-path }}/journald-exporter
       - name: Test
         run: sudo node ./scripts/e2e.js -b $BINARY
         env:
-          BINARY: ${{ steps.download.outputs.download-path }}
+          BINARY: ${{ steps.download.outputs.download-path }}/journald-exporter
