Remove caching and merge lint steps
The goal is to reduce build time

A solid 2 minutes of the build is wasted on initializing the cache for
both Clippy and Rustfmt each, while it only takes a couple minutes to
fetch all dependencies in the first place. Also, it often likes to take
a minute or three just to schedule a single task.

Miri uses the nightly toolchain, so it wouldn't benefit from caching
installation from the stable toolchain.

All in all, it should go from this (7m metered time, 8-10m real time):

- 2 minutes to download dependencies for Clippy
- 2 minutes to initialize cache in Clippy
- 2 minutes to initialize cache in Rustfmt
- 0 minutes to read from cache in build
- 15 seconds each to install toolchain for Clippy, Rustfmt, and build
- 1-3 minutes each to start Clippy, Rustfmt, Shellcheck, and build

to this (4-5m metered time, 6-8m real time):

- 2 minutes to download dependencies for lint
- 2 minutes to download dependencies for build
- 15 seconds each to install toolchain for lint and build
- 1-3 minutes each to start lint and build

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,16 +15,8 @@ permissions:
   contents: read
 
 jobs:
-  shellcheck:
-    name: Shellcheck
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Shellcheck
-        run: shellcheck ./scripts/*.sh
-
-  clippy:
-    name: Clippy
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -33,34 +25,19 @@ jobs:
       - run: sudo apt-get update
       - run: sudo apt-get install libsystemd-dev
       - uses: actions/checkout@v3
-      - uses: Swatinem/rust-cache@v2
-        with:
-          shared-key: ci-cache
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           profile: minimal
           components: clippy
+      - name: Shellcheck
+        run: shellcheck ./scripts/*.sh
       - name: Check
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ github.token }}
           args: --all-targets
-
-  rustfmt:
-    name: Rustfmt
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: Swatinem/rust-cache@v2
-        with:
-          shared-key: ci-cache
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          components: rustfmt
-      - name: Check
+      - name: Rustfmt
         uses: actions-rs/cargo@v1
         with:
           command: fmt
@@ -69,8 +46,7 @@ jobs:
   build:
     name: Build
     needs:
-      - clippy
-      - rustfmt
+      - lint
     runs-on: ubuntu-latest
     container: quay.io/pypa/manylinux2014_x86_64
     steps:
@@ -80,9 +56,6 @@ jobs:
       - run: yum -y install systemd-devel epel-release
       - run: yum -y install jq
       - uses: actions/checkout@v3
-      - uses: Swatinem/rust-cache@v2
-        with:
-          shared-key: ci-cache
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
