--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
-          components: clippy, fmt
+          components: clippy, rustfmt
       - run: shellcheck ./scripts/*.sh
       - run: cargo clippy --all-targets
       - run: cargo fmt --all --check
