--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -106,6 +106,7 @@ jobs:
         binary:
         - test-debug
         - test-release
+    continue-on-error: true
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/download-artifact@v3
@@ -149,6 +150,7 @@ jobs:
         os:
         - ubuntu-20.04
         - ubuntu-22.04
+    continue-on-error: true
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
