--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -106,7 +106,7 @@ jobs:
         binary:
         - test-debug
         - test-release
-    continue-on-error: true
+    if: success() || cancelled()
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/download-artifact@v3
@@ -120,6 +120,7 @@ jobs:
           command: ./${{ matrix.binary }} --show-output
           # Usually passes the second try if it flakes the first.
           max_attempts: 3
+        if: success() || cancelled()
 
   miri_tests:
     name: Miri tests
@@ -150,8 +151,8 @@ jobs:
         os:
         - ubuntu-20.04
         - ubuntu-22.04
-    continue-on-error: true
     runs-on: ${{ matrix.os }}
+    if: success() || cancelled()
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
@@ -159,3 +160,4 @@ jobs:
           name: journald-exporter
       - run: chmod +x journald-exporter
       - run: sudo node ./scripts/e2e.js -b journald-exporter
+        if: success() || cancelled()
