--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -158,5 +158,5 @@ jobs:
         with:
           name: journald-exporter
       - run: chmod +x journald-exporter
-      - run: useradd --system --user-group journald-exporter
+      - run: sudo useradd --system --user-group journald-exporter
       - run: sudo node ./scripts/e2e.js -b journald-exporter
